    via upstart now.
  * misc: return True/False from execute_root rather than None.

  [ Evan Dandrea ]
  * Use a GtkSpinner instead of a separate progress window when on the
    manual partitioning page.

  [ Colin Watson ]
  * In cdebconf mode, initialise the templates database if necessary as a
    workaround for cdebconf's packaging not doing this itself.

 -- Mario Limonciello <mario_limonciello@dell.com>  Wed, 03 Feb 2010 18:25:36 -0600

ubiquity (2.1.16) lucid; urgency=low

  [ Mario Limonciello ]
  * Don't fail to run oem-config if oem-config/early_command isn't set.
  * Copy oem-config/early_command from the installation preseed onto the
    installed system.
  * Try to dynamically detect the number of columns we'll need for
    stepLanguageOnly.  When showing < 15 languages, this fixes the
    orientation to be in a single column on small displays.
  * If no plugins declare themselves as plugin_is_install (such as the
    case in oem-config mode), then assume the last one is the install plugin.
  * Allow pages that are declared plugin_is_install to process other steps
    in process_step in addition to the install behaviors.
  * Add a try/except guard around the fetch of oem-config/extra_packages.
  * Add oem-config/late-command for cleaning up any preparation that was
    done via oem-config/early-command for the oem-config run.
  * Make the Mythbuntu backend setup plugin's GTK widget fit better.
  * Automatic update of included source packages: apt-setup
    1:0.42ubuntu2, partman-target 64ubuntu6.

  [ Evan Dandrea ]
  * Add oem-config/repository and oem-config/key, which respectively
    specify an additional repository to install packages from and a
    public key that the packages are signed with.
  * Copy all oem-config/* templates to the installed system.
  * Add an additional package (oem-config-remaster) to remaster an
    Ubuntu ISO with additional packages and oem-config preseed data.

  [ Colin Watson ]